@@ -35,6 +35,9 @@ extern int wrap_value_fetch_lazy PARAMS ((char *));
 extern int gdb_value_equal PARAMS ((value_ptr, value_ptr, int *));
 extern int wrap_value_equal PARAMS ((char *));
 
+extern int gdb_value_subscript PARAMS ((value_ptr, value_ptr, value_ptr *));
+extern int wrap_value_subscript PARAMS ((char *));
+
 extern int gdb_value_ind PARAMS ((value_ptr val, value_ptr * rval));
 extern int wrap_value_ind PARAMS ((char *opaque_arg));
 
